--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
@@ -136,7 +136,14 @@
                 Margin="12,0,0,-4"
                 Source="{Binding IndexedState}"/>
         </DataTemplate>
-        
+
+        <!--Function definitions-->
+        <DataTemplate x:Key="FunctionDefinitionsTemplate">
+            <memoryState:FunctionDefinitionsViewerControl
+                Margin="12,0,0,-4"
+                Source="{Binding IndexedDefinitions}"/>
+        </DataTemplate>
+
         <!--Statistics-->
         <DataTemplate x:Key="StatisticsTemplate">
             <customControls:ScriptStatisticsDisplayControl 
