Added more info to the function definitions IDE result section

--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/FunctionDefinitionTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/FunctionDefinitionTemplate.xaml
@@ -50,7 +50,8 @@
                 Foreground="#FFAE0909"
                 Grid.Column="1"
                 VerticalAlignment="Center"
-                HorizontalAlignment="Center">
+                HorizontalAlignment="Center"
+                TextWrapping="Wrap">
                 <TextBlock.RenderTransform>
                     <TranslateTransform Y="-2"/>
                 </TextBlock.RenderTransform>
