--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
@@ -11,7 +11,7 @@
     xmlns:ideResult="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList.IDEResult"
     xmlns:memoryState="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.MemoryState"
     xmlns:ideResults="using:Brainf_ck_sharp_UWP.TemplateSelectors.IDEResults"
-    xmlns:ideResults1="using:Brainf_ck_sharp_UWP.Converters.IDEResults"
+    xmlns:IDEConverters="using:Brainf_ck_sharp_UWP.Converters.IDEResults"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -160,8 +160,9 @@
         <ideResults:IDERunResultHeaderTemplateSelector x:Key="HeaderTemplateSelector"/>
 
         <!--Headers converter-->
-        <ideResults1:IDESectionToDisplayNameConverter x:Key="HeadersConverter"/>
-        <ideResults1:IDESectionToUppercaseDisplayNameConverter x:Key="UppercaseConverter"/>
+        <IDEConverters:IDESectionToDisplayNameConverter x:Key="HeadersConverter"/>
+        <IDEConverters:IDESectionToUppercaseDisplayNameConverter x:Key="UppercaseConverter"/>
+        <IDEConverters:IDESectionHeaderMarginConverter x:Key="MarginsConverter"/>
         
         <!--Header-->
         <DataTemplate x:Key="HeaderTemplate">
@@ -174,7 +175,7 @@
         <DataTemplate x:Key="HeaderWithBottomMarginTemplate">
             <jumpList:JumpListZoomedInHeaderTemplate
                 Title="{Binding Key, Converter={StaticResource HeadersConverter}}"
-                Margin="12,8,16,4"/>
+                Margin="{Binding Key, Converter={StaticResource MarginsConverter}, ConverterParameter=12_8_16_4_8}"/>
         </DataTemplate>
 
         <!--Zoomed out default header-->
