--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/ResetLoopCodePreviewControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/ResetLoopCodePreviewControl.xaml
@@ -1,16 +1,15 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEThemes.IDEThemePreviewTemplate"
+    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.CodeSamples.ResetLoopCodePreviewControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="200"
-    d:DesignWidth="800">
+    d:DesignHeight="300"
+    d:DesignWidth="400">
 
-    <Grid
-        Background="#FF1E1E1E"
-        x:Name="BackgroundGrid">
+    <!--Root-->
+    <Grid Background="#FF1E1E1E">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -25,7 +24,6 @@
         <!--Breakpoints pane-->
         <Border 
             Background="#FF333333"
-            x:Name="BreakpointsCanvas"
             Grid.Column="0"
             Grid.Row="1"
             Grid.RowSpan="2"
@@ -37,14 +35,12 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="3"
-            x:Name="HeaderBorder"
             Background="#FF333333">
             <Border Background="#20000000">
                 <TextBlock
                     IsTextScaleFactorEnabled="False"
                     Margin="12,4,0,4"
-                    Text="Default"
-                    x:Name="TitleBlock"/>
+                    Text="Reset the current cell"/>
             </Border>
         </Border>
 
@@ -68,12 +64,10 @@
                 TextAlignment="Right"
                 TextTrimming="CharacterEllipsis"
                 Foreground="#FF237CAD"
-                x:Name="LineNumbersBlock"
                 Margin="0,1,0,0">
                 <Run Text="1"/><LineBreak/>
                 <Run Text="2"/><LineBreak/>
-                <Run Text="3"/><LineBreak/>
-                <Run Text="4"/>
+                <Run Text="3"/>
             </TextBlock>
 
             <!--Vertical guide-->
@@ -82,17 +76,14 @@
                 Grid.Column="2"
                 Width="1"
                 HorizontalAlignment="Left"
-                Margin="21,0,0,0"
-                x:Name="BracketsGuidePanel">
+                Margin="21,0,0,0">
                 <StackPanel.Clip>
                     <RectangleGeometry 
-                        Rect="0,0,1,20"
-                        x:Name="BracketsGuideClip"/>
+                        Rect="0,0,1,20"/>
                 </StackPanel.Clip>
                 <StackPanel.RenderTransform>
                     <TranslateTransform
-                        Y="22"
-                        x:Name="BracketsGuideTransform"/>
+                        Y="22"/>
                 </StackPanel.RenderTransform>
                 <Rectangle
                     Height="3"
@@ -115,75 +106,26 @@
                     Fill="#FF717171"/>
             </StackPanel>
 
-            <!--Line highlight-->
-            <Border
-                Canvas.ZIndex="1"
-                Grid.Column="2"
-                Height="20"
-                VerticalAlignment="Top"
-                Margin="8,0,0,0"
-                BorderThickness="2"
-                BorderBrush="#30FFFFFF"
-                x:Name="LineHighlightBorder">
-                <Border.RenderTransform>
-                    <TranslateTransform 
-                        x:Name="LineHighlightTransform"
-                        Y="22"/>
-                </Border.RenderTransform>
-            </Border>
-
             <!--Code sample-->
             <TextBlock
                 Canvas.ZIndex="2"
                 IsTextScaleFactorEnabled="False"
                 Margin="20,0,20,0"
                 Grid.Column="2"
-                FontSize="15"
-                x:Name="PreviewBlock">
+                FontSize="15">
                 <Run
-                    Foreground="#FFBDB76B"
-                    x:Name="CommaRun"
-                    Text=","/><Run 
-                    Text="+++++"
-                    Foreground="White"
-                    x:Name="OperatorsRun"/><Run 
                     Text="["
-                    Foreground="#FF569CD6"
-                    x:Name="BracketRun"/><LineBreak/>
+                    Foreground="#FF569CD6"/><LineBreak/>
                 <Run 
-                    Text="      >"
-                    Foreground="#FFDDDDDD"
-                    x:Name="ArrowRun"/><Run 
-                    Text="+"
-                    Foreground="#FFFFFFFF"
-                    x:Name="OperatorsRun2"/><Run 
-                    Text="&lt;"
-                    Foreground="#FFDDDDDD"
-                    x:Name="ArrowRun2"/><Run 
-                    Text="-"
-                    Foreground="White"
-                    x:Name="OperatorsRun3"/>
+                    Text="      -"
+                    Foreground="#FFFFFFFF"/>
                 <Run 
-                    Text="Move to next cell"
+                    Text="Subtract 1 each time"
                     Foreground="#FF52AF3D"
-                    x:Name="CommentRun"
                     x:Uid="CommentRun"/><LineBreak/>
                 <Run 
                     Text="]"
-                    Foreground="#FF569CD6"
-                    x:Name="BracketRun2"/><LineBreak/>
-                <Run 
-                    Text=">"
-                    Foreground="#FFDDDDDD"
-                    x:Name="ArrowRun3"/><Run 
-                    Text="."
-                    Foreground="#FFCD5C5C"
-                    x:Name="DotRun"/>
-                <Run 
-                    Text="Print value"
-                    Foreground="#FF52AF3D"
-                    x:Name="CommentRun2"
-                    x:Uid="CommentRun2"/>
+                    Foreground="#FF569CD6"/>
             </TextBlock>
         </Grid>
     </Grid>
