--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/ResetLoopCodePreviewControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/ResetLoopCodePreviewControl.xaml
@@ -78,32 +78,17 @@
                 HorizontalAlignment="Left"
                 Margin="21,0,0,0">
                 <StackPanel.Clip>
-                    <RectangleGeometry 
-                        Rect="0,0,1,20"/>
+                    <RectangleGeometry Rect="0,0,1,20"/>
                 </StackPanel.Clip>
                 <StackPanel.RenderTransform>
-                    <TranslateTransform
-                        Y="22"/>
+                    <TranslateTransform Y="22"/>
                 </StackPanel.RenderTransform>
                 <Rectangle
-                    Height="3"
-                    Width="1"
-                    Fill="#FF717171"/>
-                <Rectangle
-                    Height="3"
-                    Width="1"
-                    Margin="0,3,0,0"
-                    Fill="#FF717171"/>
-                <Rectangle
-                    Height="3"
-                    Width="1"
-                    Margin="0,3,0,0"
-                    Fill="#FF717171"/>
-                <Rectangle
-                    Height="3"
-                    Width="1"
-                    Margin="0,3,0,0"
-                    Fill="#FF717171"/>
+                    Margin="0"
+                    Style="{StaticResource BracketsGuideRectangleStyle}"/>
+                <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
+                <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
+                <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
             </StackPanel>
 
             <!--Code sample-->
