--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamplesGuideControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamplesGuideControl.xaml
@@ -6,26 +6,63 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:codeSamples="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.CodeSamples"
     mc:Ignorable="d"
-    d:DesignHeight="1000"
-    d:DesignWidth="400">
-
+    d:DesignHeight="1200"
+    d:DesignWidth="480">
     <StackPanel>
 
+        <!--Introduction-->
         <TextBlock 
             TextWrapping="WrapWholeWords"
-            Text="PBrain is an extension of the Brainf*ck language, created by Paul M. Parks. It adds support for functions, with the addition of the following operators:"/>
+            FontSize="14">
+            <Run Text="A good strategy to learn how to code in Brainf*ck, as with everything else, is to start from simpler and smaller programs and to make them more complex along the way."/>
+            <LineBreak/>
+            <Run Text="For example, a common operation is to reset the value of the current cell, whatever it may be"/>
+            <LineBreak/>
+            <Run Text="A simple loop can be used in this case:"/>
+        </TextBlock>
 
-        <codeSamples:ResetLoopCodePreviewControl Margin="0,16,0,16"/>
+        <!--Reset loop-->
+        <codeSamples:ResetLoopCodePreviewControl 
+            HorizontalAlignment="Left"
+            Margin="0,16,0,0"/>
         
-        <codeSamples:SimpleLoopCodePreviewControl Margin="0,16,0,16"/>
-
+        <!--Second description-->
         <TextBlock 
-            TextWrapping="WrapWholeWords">
-            <Run
-                FontFamily="Segoe MDL2 Assets"
-                Text="&#xE7BA;"
-                Foreground="OrangeRed"/>
-            <Run Text="A function definition must contain at least a Brainf*ck operator and its body can't be empty. Moreover, it is not possible to define nested functions."/>
+            Margin="0,16,0,0"
+            TextWrapping="WrapWholeWords"
+            FontSize="14">
+            <Run Text="In many situations it is useful to make a copy of the current cell, to be able to perform some operations with its value, without losing track of the initial state of the memory cell."/>
+            <LineBreak/>
+            <Run Text="To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell."/>
+        </TextBlock>
+        
+        <!--Copy value loop-->
+        <codeSamples:SimpleLoopCodePreviewControl 
+            HorizontalAlignment="Left"
+            Margin="0,16,0,0"/>
+
+        <!--Advanced sample description-->
+        <TextBlock 
+            Margin="0,16,0,0"
+            TextWrapping="WrapWholeWords"
+            FontSize="14">
+            <Run Text="All these techniques can be combined to write more complex programs."/>
+            <LineBreak/>
+            <Run Text="A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read."/>
+            <LineBreak/>
+            <Run Text="In this example, to print the word &quot;Hello&quot; two loops will be used to set two cells to values closer to the letters that will be printed. It'd definitely better to use a similar approach than to repeating the + operator 72 times to print the &quot;H&quot; character."/>
+        </TextBlock>
+
+        <!--Advanced loop sample-->
+        <codeSamples:PrintHelloCodePreviewControl 
+            HorizontalAlignment="Left"
+            Margin="0,16,0,0"/>
+
+        <TextBlock
+            Margin="0,16,0,0"
+            TextWrapping="WrapWholeWords"
+            FontSize="14">
+            <Run Text="This script will set the cells #2 and #3 to values closer to the characters that will be printed by the script, so that less operations will be needed to get to the actual values the code wants to display to the user."/>
         </TextBlock>
     </StackPanel>
 </UserControl>
