--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/LanguageIntroductionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/LanguageIntroductionControl.xaml
@@ -8,10 +8,11 @@
     mc:Ignorable="d"
     d:DesignHeight="1000"
     d:DesignWidth="400">
-
     <StackPanel>
 
+        <!--Introduction-->
         <TextBlock 
+            FontSize="14"
             TextWrapping="WrapWholeWords">
             <Run Text="Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller."/>
             <LineBreak/>
@@ -50,11 +51,45 @@
             Operator="]"
             Description="Loops and executes the current operators sequence if the value of the current cell is greater than 0"
             OperatorForegroundBrush="#FF569CD6"/>
-        <local:OperatorDescriptionControl
-            Margin="0,12,0,0"
-            Operator="."
-            Description="Prints the Unicode character corresponding to the value of the current memory cell. The Unicode is available in the app, under the ... menu"
-            OperatorForegroundBrush="IndianRed"/>
+        
+        <!--Dot operator-->
+        <Grid
+            HorizontalAlignment="Left"
+            BorderThickness="2"
+            BorderBrush="#20FFFFFF">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!--Operator-->
+            <Canvas Background="#20000000"/>
+            <TextBlock 
+                Grid.Column="0"
+                Margin="12,10,12,10"
+                Text="."
+                FontSize="20"
+                Foreground="IndianRed"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"/>
+
+            <!--Right character-->
+            <Canvas 
+                Background="#06FFFFFF"
+                Grid.Column="1"/>
+            <TextBlock
+                FontSize="14"
+                Margin="12,8,12,8"
+                TextWrapping="WrapWholeWords"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left">
+                <Run Text="Prints the Unicode character corresponding to the value of the current memory cell. The Unicode is available in the app, under the"/>
+                <Run Text="&#xE10C;"
+                     FontFamily="Segoe MDL2 Assets"/>
+                <Run Text="menu"/>
+            </TextBlock>
+        </Grid>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator=","
