--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/OperatorDescriptionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/OperatorDescriptionControl.xaml
@@ -35,6 +35,7 @@
             Background="#06FFFFFF"
             Grid.Column="1"/>
         <TextBlock
+            FontSize="14"
             Margin="12,8,12,8"
             TextWrapping="WrapWholeWords"
             x:Name="DescriptionBlock"
