--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/PBrainGuideControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/PBrainGuideControl.xaml
@@ -8,13 +8,15 @@
     mc:Ignorable="d"
     d:DesignHeight="1000"
     d:DesignWidth="400">
-
     <StackPanel>
 
+        <!--Description-->
         <TextBlock 
             TextWrapping="WrapWholeWords"
+            FontSize="14"
             Text="PBrain is an extension of the Brainf*ck language, created by Paul M. Parks. It adds support for functions, with the addition of the following operators:"/>
 
+        <!--Operators-->
         <local:OperatorDescriptionControl
             Margin="0,16,0,0"
             Operator="("
@@ -31,9 +33,11 @@
             Description="Call the function associated with the value of the current memory cell"
             OperatorForegroundBrush="#FF1E7499"/>
 
+        <!--Warning-->
         <TextBlock 
             Margin="0,16,0,0"
-            TextWrapping="WrapWholeWords">
+            TextWrapping="WrapWholeWords"
+            FontSize="14">
             <Run
                 FontFamily="Segoe MDL2 Assets"
                 Text="&#xE7BA;"
