--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/PrintHelloCodePreviewControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/PrintHelloCodePreviewControl.xaml
@@ -23,7 +23,8 @@
                 <TextBlock
                     IsTextScaleFactorEnabled="False"
                     Margin="12,4,0,4"
-                    Text="Print &quot;Hello&quot;"/>
+                    Text="Print &quot;Hello&quot;"
+                    x:Uid="GuideSamplePrintHelloTitle"/>
             </Border>
         </Border>
 
@@ -142,7 +143,7 @@
                     <Run 
                         Text="7 in cell #0"
                         Foreground="#FF52AF3D"
-                        x:Uid="CommentRun"/><LineBreak/>
+                        x:Uid="GuideSamplePrintHelloComment1"/><LineBreak/>
                     <Run 
                         Text="["
                         Foreground="#FF569CD6"/><LineBreak/>
@@ -152,9 +153,9 @@
                         Text="+++++"
                         Foreground="#FFFFFFFF"/>
                     <Run 
-                        Text="7*5=35 in cell #1"
+                        Text="7 * 5 = 35 in cell #1"
                         Foreground="#FF52AF3D"
-                        x:Uid="CommentRun"/><LineBreak/>
+                        x:Uid="GuideSamplePrintHelloComment2"/><LineBreak/>
                     <Run 
                         Text="      ["
                         Foreground="#FF569CD6"/><LineBreak/>
@@ -168,9 +169,9 @@
                         Text="++"
                         Foreground="#FFFFFFFF"/>
                     <Run 
-                        Text="35*2 in cell #2 and 35*3 in #3"
+                        Text="35 * 2 in cell #2 and 35 * 3 in #3"
                         Foreground="#FF52AF3D"
-                        x:Uid="CommentRun2"/><LineBreak/>
+                        x:Uid="GuideSamplePrintHelloComment3"/><LineBreak/>
                     <Run 
                         Text="            &lt;&lt;"
                         Foreground="#FFDDDDDD"/><Run 
@@ -179,7 +180,7 @@
                     <Run 
                         Text="Back to loop start and decrement"
                         Foreground="#FF52AF3D"
-                        x:Uid="CommentRun2"/><LineBreak/>
+                        x:Uid="GuideSamplePrintHelloComment4"/><LineBreak/>
                     <Run 
                         Text="      ]"
                         Foreground="#FF569CD6"/><Run 
@@ -213,7 +214,8 @@
                         Foreground="IndianRed"/>
                     <Run 
                         Text="Adjust the values and print"
-                        Foreground="#FF52AF3D"/>
+                        Foreground="#FF52AF3D"
+                        x:Uid="GuideSamplePrintHelloComment5"/>
                 </TextBlock>
             </Grid>
         </ScrollViewer>
