--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/LanguageIntroductionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/LanguageIntroductionControl.xaml
@@ -14,42 +14,54 @@
         <TextBlock 
             FontSize="14"
             TextWrapping="WrapWholeWords">
-            <Run Text="Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller."/>
+            <Run 
+                Text="Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller."
+                x:Uid="GuideIntroduction1"/>
             <LineBreak/>
-            <Run Text="The language itself replicates a Touring machine, as the state of the interpreter is only described of a memory array and an instruction pointer than can move back and forth and change values of the memory cells, as it passes over them."/>
+            <Run 
+                Text="The language itself replicates a Touring machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them."
+                x:Uid="GuideIntroduction2"/>
             <LineBreak/>
-            <Run Text="A Brainf*ck program is made up of only 8 operators:"></Run>
+            <Run 
+                Text="A Brainf*ck program is made up of only 8 operators:"
+                x:Uid="GuideIntroduction3"/>
         </TextBlock>
 
         <local:OperatorDescriptionControl
             Margin="0,16,0,0"
             Operator=">"
-            Description="Moves the instruction pointer to the next cell"
+            Description="Moves the memory pointer to the next cell"
+            x:Uid="GuideOperator1"
             OperatorForegroundBrush="#FFDDDDDD"/>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator="&lt;"
-            Description="Moves the instruction pointer back"
+            Description="Moves the memory pointer back"
+            x:Uid="GuideOperator2"
             OperatorForegroundBrush="#FFDDDDDD"/>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator="+"
             Description="Increments the value of the current cell"
+            x:Uid="GuideOperator3"
             OperatorForegroundBrush="White"/>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator="-"
             Description="Decrements the value of the current cell"
+            x:Uid="GuideOperator4"
             OperatorForegroundBrush="White"/>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator="["
             Description="Starts a loop on the current cell, only if its value is greater than 0"
+            x:Uid="GuideOperator5"
             OperatorForegroundBrush="#FF569CD6"/>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator="]"
             Description="Loops and executes the current operators sequence if the value of the current cell is greater than 0"
+            x:Uid="GuideOperator6"
             OperatorForegroundBrush="#FF569CD6"/>
         
         <!--Dot operator-->
@@ -84,16 +96,21 @@
                 Grid.Column="1"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Left">
-                <Run Text="Prints the Unicode character corresponding to the value of the current memory cell. The Unicode is available in the app, under the"/>
+                <Run 
+                    Text="Prints the Unicode character corresponding to the value of the current memory cell. The Unicode table is available in the app, under the"
+                    x:Uid="GuideOperators7Part1"/>
                 <Run Text="&#xE10C;"
                      FontFamily="Segoe MDL2 Assets"/>
-                <Run Text="menu"/>
+                <Run 
+                    Text="menu"
+                    x:Uid="GuideOperators7Part2"/>
             </TextBlock>
         </Grid>
         <local:OperatorDescriptionControl
             Margin="0,12,0,0"
             Operator=","
             Description="Reads a Unicode character from the Stdin buffer and stores its value in the current memory cell"
+            x:Uid="GuideOperator8"
             OperatorForegroundBrush="DarkKhaki"/>
     </StackPanel>
 </UserControl>
