--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
@@ -66,6 +66,7 @@
         
         <!--Dot operator-->
         <Grid
+            Margin="0,12,0,0"
             HorizontalAlignment="Left"
             BorderThickness="2"
             BorderBrush="#20FFFFFF">
