--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/SimpleLoopCodePreviewControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/CodeSamples/SimpleLoopCodePreviewControl.xaml
@@ -13,7 +13,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="4"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
