--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/UserGuideViewerControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/UserGuideViewerControl.xaml
@@ -4,11 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:consoleMemoryViewer="using:Brainf_ck_sharp_UWP.Converters.ConsoleMemoryViewer"
     xmlns:jumpList="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList"
     xmlns:templateSelectors="using:Brainf_ck_sharp_UWP.TemplateSelectors"
     xmlns:sections="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.Sections"
-    xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
+    xmlns:userGuide="using:Brainf_ck_sharp_UWP.Converters.UserGuide"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -33,13 +32,14 @@
         <templateSelectors:UserGuideSectionTemplateSelector x:Key="SectionTemplateSelector"/>
 
         <!--Headers converter-->
-        <consoleMemoryViewer:ConsoleMemoryViewerSectionUppercaseNameConverter x:Key="UppercaseConverter"/>
-        <converters:UserGuideSectionDescriptionConverter x:Key="HeaderDescriptorConverter"/>
+        <userGuide:UserGuideSectionTitleConverter x:Key="TitleConverter"/>
+        <userGuide:UserGuideSectionTitleUppercaseConverter x:Key="UppercaseConverter"/>
+        <userGuide:UserGuideSectionDescriptionConverter x:Key="HeaderDescriptorConverter"/>
 
         <!--Header-->
         <DataTemplate x:Key="HeaderTemplate">
             <jumpList:JumpListZoomedInHeaderTemplate
-                Title="{Binding Key}"
+                Title="{Binding Key, Converter={StaticResource TitleConverter}}"
                 Margin="12,8,16,4"/>
         </DataTemplate>
 
